--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,10 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
+        "laravel/nova": "*",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
-        "laravel/nova": "*"
+        "livewire/livewire": "^1.3"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
