--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "tailwindcss": "^1.7.3"
+        "@tailwindcss/ui": "^0.5.0",
+        "chart.js": "^2.9.3",
+        "tailwindcss": "^1.7.6"
     }
 }
