--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@tailwindcss/ui": "^0.5.0",
         "chart.js": "^2.9.3",
+        "chartjs": "^0.3.24",
         "tailwindcss": "^1.8.10"
     }
 }
