--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laravel/nova": "*",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
-        "livewire/livewire": "^1.3",
+        "livewire/livewire": "^2.0",
         "maatwebsite/laravel-nova-excel": "^1.2",
         "spatie/laravel-permission": "^3.16",
         "vyuldashev/nova-permission": "^2.9"
@@ -64,7 +64,9 @@
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "@php artisan package:discover --ansi",
+            "@php artisan vendor:publish --force --tag=livewire:assets --ansi"
+
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
