--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@tailwindcss/ui": "^0.5.0",
         "chart.js": "^2.9.3",
         "chartjs": "^0.3.24",
+        "select2": "^4.0.13",
         "tailwindcss": "^1.8.10"
     }
 }
