--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
         "livewire/livewire": "^2.0",
+        "maatwebsite/excel": "^3.1",
         "maatwebsite/laravel-nova-excel": "^1.2",
         "spatie/laravel-permission": "^3.16",
         "vyuldashev/nova-permission": "^2.9"
